--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>upload an image</h1>
     <form
-      action="http://localhost:3200/upload"
+      action="https://bramble-well-quality.glitch.me/upload"
       method="post"
       enctype="multipart/form-data"
     >
